[workspace]

members = [
    "2021/day1",
    "2021/day2",
    "2021/day3",
    "2021/day4",
    "2021/day11",
    "2021/day12",
    "2021/day13",
    "2022/day1_2022",
    "2022/day2_2022",
    "2022/day3_2022",
    "2022/day4_2022",
    "2022/day5_2022",
    "2022/day6_2022",
    "2022/day7_2022",
    "2022/day8_2022",
    "common"
]
