[workspace]

members = [
    "2021/day1",
    "2021/day2",
    "2021/day3",
    "2021/day4",
    "2021/day11",
    "2021/day12",
    "2021/day13",
    "2022/day1_2022",
    "2022/day2_2022",
    "2022/day3_2022",
    "2022/day4_2022",
    "2022/day5_2022",
    "2022/day6_2022",
    "2022/day7_2022",
    "2022/day8_2022",
    "2022/day9_2022",
    "2022/day10_2022",
    "2022/day11_2022",
    "2022/day12_2022",
    "2022/day13_2022",
    "2022/day14_2022",
    "2022/day15_2022",
    "2022/day16_2022",
    "2022/day17_2022",
    "2022/day18_2022",
    "2022/day19_2022",
    "2022/day20_2022",
    "2022/day21_2022",
    "2022/day22_2022",
    "2022/day23_2022",
    "2022/day24_2022",
    "common"
]
